// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AlertDialog (snapshot) renders AlertDialogContent in defaultOpen state 1`] = `
<div
  aria-describedby="radix-_r_5_"
  aria-labelledby="radix-_r_4_"
  class="fixed left-[50%] top-[50%] z-50 grid w-full max-w-lg translate-x-[-50%] translate-y-[-50%] gap-4 border bg-background p-6 shadow-lg duration-200 data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[state=closed]:slide-out-to-left-1/2 data-[state=closed]:slide-out-to-top-[48%] data-[state=open]:slide-in-from-left-1/2 data-[state=open]:slide-in-from-top-[48%] sm:rounded-lg"
  data-state="open"
  id="radix-_r_3_"
  role="alertdialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="flex flex-col space-y-2 text-center sm:text-left"
  >
    <h2
      class="text-lg font-semibold"
      id="radix-_r_4_"
    >
      Are you sure?
    </h2>
    <p
      class="text-sm text-muted-foreground"
      id="radix-_r_5_"
    >
      Body
    </p>
  </div>
  <div
    class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2"
  >
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 mt-2 sm:mt-0"
      type="button"
    >
      Cancel
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      type="button"
    >
      Continue
    </button>
  </div>
</div>
`;

exports[`AlertDialog (snapshot) renders trigger in closed state 1`] = `
<button
  aria-controls="radix-_r_0_"
  aria-expanded="false"
  aria-haspopup="dialog"
  data-state="closed"
  type="button"
>
  Delete
</button>
`;

exports[`AlertDialog (snapshot) renders with asChild trigger 1`] = `
<button
  aria-controls="radix-_r_6_"
  aria-expanded="false"
  aria-haspopup="dialog"
  data-state="closed"
  type="button"
>
  Custom trigger
</button>
`;
